修改按钮CSS错误

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -13,13 +13,13 @@
 #map-zoom-enlargement{
     position:absolute; 
     left:0; top:0; right:0; bottom:49%; margin:auto;
-    width:99%; height:99%; 
+    width:44PX; height:44PX; 
 }
 
 #map-zoom-reduction{
     position:absolute; 
-    left:0; top:49%; right:0; bottom:0; margin:auto;
-    width:99%; height:99%; 
+    left:0; top:51%; right:0; bottom:0; margin:auto;
+    width:44PX; height:44PX; 
 }
 
 .map-tool-bar-bg{
