--- a/src/pages/trip/index.scss
+++ b/src/pages/trip/index.scss
@@ -83,10 +83,10 @@
   position:absolute; 
   left:0; top:0; right:0; bottom:0; margin:auto; 
   width:66PX; height:66PX; 
-  border:1PX solid #82AEFF; 
+  border:1PX solid #1C9A13; 
   border-radius:33PX; 
   
-  background-color:#296CFF;
+  background-color:#20AC15;
 }
 
 .start-icon{
