--- a/src/pages/tripping/index.scss
+++ b/src/pages/tripping/index.scss
@@ -1,131 +1,25 @@
+.wrap { width: 64px; height: 64px; position: relative; }
+.outer { position: absolute; width: 100%; height: 100%; background: url(https://www.zhangxinxu.com/study/201404/icon-spin-s.png) no-repeat; animation: spin 800ms infinite linear; }
+.inner, .inner2 { position: absolute; width: 38px; height: 38px; border-radius: 40px; overflow: hidden; left: 13px; top: 13px; }
+.inner { opacity: 1; background-color: #89abdd; animation: second-half-hide 1.6s steps(1, end) infinite; }
+.inner2 { opacity: 0; background-color: #4b86db; animation: second-half-show 1.6s steps(1, end) infinite; }
+.spiner, .filler, .masker { position: absolute; width: 50%; height: 100%; }
+.spiner { border-radius: 40px 0 0 40px; background-color: #4b86db; transform-origin: right center; animation: spin 800ms infinite linear; left: 0; top: 0; }
+.filler { border-radius: 0 40px 40px 0; background-color: #4b86db; animation: second-half-hide 800ms steps(1, end) infinite; left: 50%; top: 0; opacity: 1; }
+.masker { border-radius: 40px 0 0 40px; background-color: #89abdd; animation: second-half-show 800ms steps(1, end) infinite; left: 0; top: 0; opacity: 0; }
 
-.info-bg{
-  width:100vw; height:29vh;
-  background-color: white;
+.inner2 .spiner, .inner2 .filler { background-color: #89abdd; }
+.inner2 .masker { background-color: #4b86db; }
+
+@keyframes spin {
+  0%   { transform: rotate(360deg); }
+  100% { transform: rotate(0deg); }
 }
-
-.map{
-  left:0; top:0; 
-  width:100vw; height:80vh;
+@keyframes second-half-hide {
+  0%        { opacity: 1; }
+  50%, 100% { opacity: 0; }
 }
-
-.map-zoom-bg{
-  position:fixed; 
-  top:45vh; right:10PX; 
-  z-index:99; 
-  width:44PX; height:99PX;
-}
-
-.map-zoom-enlargement{
-  position:absolute; 
-  left:0; top:0; right:0; bottom:49%; margin:auto;
-  width:44PX; height:44PX; 
-}
-
-.map-zoom-reduction{
-  position:absolute; 
-  left:0; top:51%; right:0; bottom:0; margin:auto;
-  width:44PX; height:44PX; 
-}
-
-.map-tool-bar-bg{
-  position:fixed; 
-  left:0; right:0; 
-  margin:auto; 
-  bottom:25PX; 
-  z-index:99; 
-  width:80vw; height:70PX;
-}
-
-.map-tool-box-bg{
-  width:79vw; height:60PX; 
-  margin:3PX 0; 
-  border:1PX solid #ddd; 
-  border-radius:50PX; 
-  
-  background-color:white;
-}
-
-.map-tool-left-box{
-  position:absolute; 
-  left:0; top:0; right:55%; bottom:0; margin:auto; 
-  width:60PX; height:60PX; 
-}
-
-.map-tool-left-box-unlogin{
-  position:absolute; 
-  left:0; top:0; right:55%; bottom:0; margin:auto; 
-  width:60PX; height:60PX; 
-  opacity: 0;
-}
-
-.map-tool-right-box{
-  position:absolute; 
-  left:55%; top:0; right:0; bottom:0; margin:auto; 
-  width:60PX; height:60PX; 
-}
-
-.map-tool-right-box-unlogin{
-  position:absolute; 
-  left:55%; top:0; right:0; bottom:0; margin:auto; 
-  width:60PX; height:60PX; 
-  opacity: 0;
-}
-
-.map-tool-box-image{
-  left:0; top:0; right:0; bottom:0; margin:auto; 
-  width:60%; height:60%;
-}
-
-.map-tool-box-text{
-  left:0; top:0; right:0; bottom:10%; margin:auto; 
-  width:100%; height:30%; 
-  font-size:70%; 
-  text-align:center;
-}
-
-.start-bg{
-  position:absolute; 
-  left:0; top:0; right:0; bottom:0; margin:auto; 
-  width:66PX; height:66PX; 
-  border:1PX solid #1C9A13; 
-  border-radius:33PX; 
-  
-  background-color:#20AC15;
-}
-
-.start-icon{
-  position:absolute; 
-  left:0; top:0; right:0; bottom:0; margin:13PX auto; 
-  width:55%; height:55%; 
-}
-
-.start-icon-unlogin{
-  position:absolute; 
-  left:0; top:0; right:0; bottom:0; margin:auto; 
-  width:66PX; height:66PX; 
-  border-radius:33PX; 
-  // background: transparent;
-  opacity: 0;
-}
-
-.start-btn{
-  position:absolute; 
-  left:-5%; top:-5%; right:-5%; bottom:-5%; margin:auto; 
-  width:110%; height:110%; 
-  z-index:99; 
-  background-color:yellow;
-}
-
-
-.map-show-location-bg{
-  position:fixed; 
-  bottom:122PX; left:10PX; 
-  z-index:99; 
-  width:44PX; height:44PX;
-}
-.map-show-location-btn{
-  position:absolute; 
-  left:0; top:0; right:0; bottom:0; margin:auto; 
-  width:99%; height:99%;
+@keyframes second-half-show {
+  0%        { opacity: 0; }
+  50%, 100% { opacity: 1; }
 }
