--- a/src/pages/trip/index.scss
+++ b/src/pages/trip/index.scss
@@ -7,7 +7,6 @@
 .map-zoom-bg{
   position:fixed; 
   top:45vh; right:10PX; 
-  z-index:99; 
   width:44PX; height:99PX;
 }
 
@@ -28,44 +27,38 @@
   left:0; right:0; 
   margin:auto; 
   bottom:25PX; 
-  z-index:99; 
   width:80vw; height:70PX;
 }
 
 .map-tool-box-bg{
-  width:79vw; height:60PX; 
-  margin:3PX 0; 
+  display: flex;
+  width: 98%; height: 60PX;
+  margin-left: auto; margin-right: auto;
+  margin-top: 5PX;
   border:1PX solid #ddd; 
   border-radius:50PX; 
-  
   background-color:white;
+
+  align-items: center;
+  justify-content: space-around;
 }
 
 .map-tool-left-box{
-  position:absolute; 
-  left:0; top:0; right:55%; bottom:0; margin:auto; 
+  position:relative; 
+  // left: 10%;
+  margin-right: 10PX;
+  padding-left: 10%;
   width:60PX; height:60PX; 
-}
-
-.map-tool-left-box-unlogin{
-  position:absolute; 
-  left:0; top:0; right:55%; bottom:0; margin:auto; 
-  width:60PX; height:60PX; 
-  opacity: 0;
 }
 
 .map-tool-right-box{
-  position:absolute; 
-  left:55%; top:0; right:0; bottom:0; margin:auto; 
+  position:relative; 
+  // right: 10%;
+  margin-left: 10PX;
+  padding-right: 10%;
   width:60PX; height:60PX; 
 }
 
-.map-tool-right-box-unlogin{
-  position:absolute; 
-  left:55%; top:0; right:0; bottom:0; margin:auto; 
-  width:60PX; height:60PX; 
-  opacity: 0;
-}
 
 .map-tool-box-image{
   left:0; top:0; right:0; bottom:0; margin:auto; 
@@ -80,8 +73,8 @@
 }
 
 .start-bg{
-  position:absolute; 
-  left:0; top:0; right:0; bottom:0; margin:auto; 
+  position:relative; 
+  left:0; top:-66PX; right:0; bottom:0; margin:auto; 
   width:66PX; height:66PX; 
   border:1PX solid #1C9A13; 
   border-radius:33PX; 
@@ -100,7 +93,7 @@
   left:0; top:0; right:0; bottom:0; margin:auto; 
   width:66PX; height:66PX; 
   border-radius:33PX; 
-  // background: transparent;
+  background: red;
   opacity: 0;
 }
 
@@ -108,7 +101,6 @@
   position:absolute; 
   left:-5%; top:-5%; right:-5%; bottom:-5%; margin:auto; 
   width:110%; height:110%; 
-  z-index:99; 
   background-color:yellow;
 }
 
@@ -116,7 +108,6 @@
 .map-show-location-bg{
   position:fixed; 
   bottom:122PX; left:10PX; 
-  z-index:99; 
   width:44PX; height:44PX;
 }
 .map-show-location-btn{
