完成Tripping页面基本逻辑,准备制作Watching页

--- a/src/pages/trip/index.scss
+++ b/src/pages/trip/index.scss
@@ -115,3 +115,12 @@
   left:0; top:0; right:0; bottom:0; margin:auto; 
   width:99%; height:99%;
 }
+
+.unlogin-bg{
+  position:fixed; 
+  left:0; right:0; 
+  margin:auto; 
+  bottom:25PX; 
+  width:80vw; height:70PX;
+  // opacity: 0;
+}
